<resources>
    <string name="msg_error_time_out">Connection timeout!</string>
    <string name="msg_error_no_internet">Not connect internet!</string>
    <string name="msg_error_data_parse">Parse data error!</string>
    <string name="text_short_story">Truyện ngắn</string>
    <string name="text_checking">Kiểm tra</string>
    <string name="text_translate_sentence">Dịch câu</string>
    <string name="text_irregular">Bất quy tắc</string>
    <string name="text_favourite">Yêu thích</string>
    <string name="text_timer">Hẹn giờ học</string>
    <string name="text_pronounce">Phát âm</string>
    <string name="text_share">Chia sẻ</string>
    <string name="text_review">Đánh giá</string>
    <string name="text_target">Mục tiêu</string>
    <string name="text_choose_timer_open_app">Hẹn giờ mở ứng dụng</string>
    <string name="text_choose_timer_remind">Hẹn giờ nhắc từ vựng</string>

    <string name="text_wrong_answer">Oops!\nBạn trả lời sai mất rồi\nĐáp án đúng:\n</string>
    <string name="text_correct_answer">Yeah!\nBạn đã trả lời đúng!\nTiếp tục nào!\nĐáp án đúng:\n</string>

    <string name="text_result_fail">Rất tiếc bạn chưa vượt qua được bài kiểm tra. Vui lòng chơi lại để có kết quả tốt hơn</string>
    <string name="text_result_pass">Chúc mừng bạn đã vượt qua bài kiểm tra. Bạn có thể chơi lại để có kết quả tốt hơn hoặc chọn unit mới nhé</string>

    <string name="text_warning_unit">Bạn hãy hoàn thành Unit %s trước nhé! Cố lên nào!</string>
</resources>