<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTarget"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/background_target_home"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_target"
            android:layout_marginStart="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvChooseTarget"
            app:layout_constraintBottom_toBottomOf="@+id/tvChooseTarget"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/text_target"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivTarget"
            app:layout_constraintStart_toEndOf="@+id/ivTarget"
            app:layout_constraintTop_toTopOf="@id/ivTarget" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvChooseTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/background_choose_target"
            android:paddingStart="@dimen/dp_8"
            android:paddingTop="@dimen/dp_3"
            android:paddingEnd="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_3"
            android:text="1 Unit / Day"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_5"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="@id/tvChooseTarget"
            app:layout_constraintEnd_toEndOf="@id/tvChooseTarget"
            app:layout_constraintTop_toTopOf="@id/tvChooseTarget" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTarget"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseTarget" />

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/tvResultTarget"-->
<!--            android:layout_width="@dimen/dp_0"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/dp_5"-->
<!--            android:layout_margin="@dimen/dp_10"-->
<!--            android:text="@string/text_target"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="@dimen/sp_16"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/rvTarget" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEverydayVocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="Từ vựng mỗi ngày"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTarget" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEverydayVocabulary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_10"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEverydayVocabulary" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_10"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEverydayVocabulary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTimer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_alarm" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_timer"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFavourite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_like" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_favourite"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCheck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_check" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_checking"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvShortStory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_short_story" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_short_story"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTranslate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_translate" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_translate_sentence"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPronounce"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_pronounce" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_pronounce"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvIrregular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_6"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_5"
                        android:src="@drawable/ic_bqt" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dp_10"
                        android:gravity="center"
                        android:text="@string/text_irregular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/text_share"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnReview"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:drawableStart="@drawable/ic_review"
        android:drawablePadding="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/text_review"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>